sas-core/main/default/objects/IRR_Constant__mdt/IRR_Constant__mdt.object-meta.xml
<CustomObject>
    <label>Constant</label>
    <pluralLabel>Constant</pluralLabel>
</CustomObject>