sas-core/main/default/objects/IRR_Constant__mdt/fields/AIRLINE__c.field-meta.xml
<CustomField>
    <fullName>AIRLINE__c</fullName>
    <label>AIRLINE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>