sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_BOOKING_REF__c.field-meta.xml
<CustomField>
    <fullName>ERROR_BOOKING_REF__c</fullName>
    <label>ERROR_BOOKING_REF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>