sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_DELAY_MINUTES__c.field-meta.xml
<CustomField>
    <fullName>ERROR_DELAY_MINUTES__c</fullName>
    <label>ERROR_DELAY_MINUTES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>