sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_FLIGHT_ID__c.field-meta.xml
<CustomField>
    <fullName>ERROR_FLIGHT_ID__c</fullName>
    <label>ERROR_FLIGHT_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>