sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_NEW_INFO_TIME__c.field-meta.xml
<CustomField>
    <fullName>ERROR_NEW_INFO_TIME__c</fullName>
    <label>ERROR_NEW_INFO_TIME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>