sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_NO_ADDED_SEGMENTS__c.field-meta.xml
<CustomField>
    <fullName>ERROR_NO_ADDED_SEGMENTS__c</fullName>
    <label>ERROR_NO_ADDED_SEGMENTS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>