sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_NO_EVENT__c.field-meta.xml
<CustomField>
    <fullName>ERROR_NO_EVENT__c</fullName>
    <label>ERROR NO EVENT</label>
    <length>250</length>
    <type>Text</type>
</CustomField>