sas-core/main/default/objects/IRR_Constant__mdt/fields/ERROR_SCHD_TIME__c.field-meta.xml
<CustomField>
    <fullName>ERROR_SCHD_TIME__c</fullName>
    <label>ERROR_SCHD_TIME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>