sas-core/main/default/objects/IRR_Constant__mdt/fields/EVENT_FLOW_NAME__c.field-meta.xml
<CustomField>
    <fullName>EVENT_FLOW_NAME__c</fullName>
    <label>EVENT_FLOW_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>